//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  name String [not null]
  hash String [not null]
  isActive Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  notes notes [not null]
  notebooks notebooks [not null]
  subscription subscriptions
  limit limits
  sharedNotes shared_notes [not null]
}

Table subscriptions {
  id String [pk]
  stripeCustomerId String [unique, not null]
  stripeSubscriptionId String [unique, not null]
  stripePriceId String [unique, not null]
  stripeCurrentPeriodStart DateTime [not null]
  stripeCurrentPeriodEnd DateTime [not null]
  isActive Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [unique, not null]
  user users [not null]
}

Table limits {
  id String [pk]
  userId String [unique, not null]
  noteCount Int [not null]
  notebookCount Int [not null]
  tagCount Int [not null]
  sharedNoteCount Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
}

Table notebooks {
  id String [pk]
  name String [not null]
  ownerId String [not null]
  notes notes [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
}

Table notes {
  id String [pk]
  cover String
  title String [not null]
  content String [not null]
  ownerId String [not null]
  notebookId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  tags tags [not null]
  notebook notebooks [not null]
  sharedNotes shared_notes [not null]
}

Table tags {
  id String [pk]
  name String [unique, not null]
  notes notes [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table shared_notes {
  id String [pk]
  noteId String [not null]
  userId String [not null]
  permission SharedNoteRole [not null, default: 'VIEWER']
  note notes [not null]
  user users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table NoteToTag {
  tagsId String [ref: > tags.id]
  notesId String [ref: > notes.id]
}

Enum SharedNoteRole {
  EDITOR
  VIEWER
}

Ref: subscriptions.userId - users.id

Ref: limits.userId - users.id

Ref: notebooks.ownerId > users.id

Ref: notes.ownerId > users.id

Ref: notes.notebookId > notebooks.id

Ref: shared_notes.noteId > notes.id

Ref: shared_notes.userId > users.id